--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,15 +3,12 @@ project:
   output-dir: docs
 
 book:
-  title: "Sea Urchin Microinjection Protocol"
+  title: "Lapo + Csenge"
   author: "Csenge Petak"
-  date: "Fall 2023"
+  date: "2024"
   chapters:
     - index.qmd
-    - eggs_sperm.qmd
-    - microinjection.qmd
-
-bibliography: references.bib
+    - location.qmd
 
 from: markdown+emoji
 
