--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,8 +11,8 @@ website:
         href: index.qmd
       - text: Location
         href: location.qmd
-      - text: RSVP
-        href: rsvp.qmd
+      - text: Info
+        href: info.qmd
 
 from: markdown+emoji
 
